# termaxa

./: .gitignore  CHANGELOG.md  Cargo.toml  INTEGRATION.md  LICENSE-APACHE  LICENSE-MIT  PATCHES.md  README.md  RELEASING.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
demos/: 1-trench-coat.tape  2-blast-radius.tape  3-rollback.tape  README.md  seed.sql
docs/: LAUNCH.md  roadmap.md  session.md
docs/product/: termaxa.md
examples/: policy.yaml
snippets/: policy-circuit-breaker.yaml
src/: audit.rs  backup.rs  context.rs  hook.rs  init.rs  intent.rs  main.rs  notify.rs  paths.rs  pg.rs  policy.rs  preview.rs  report.rs  runner.rs  shell.rs  state.rs
