[package]
name = "termaxa"
version = "0.11.2"
edition = "2021"
description = "A cooperative gate for the shell commands AI coding agents run — command previews, automatic backups, allow/ask/deny policy, and audit logging."
license = "MIT OR Apache-2.0"
repository = "https://github.com/termaxa/termaxa"
homepage = "https://termaxa.com"
readme = "README.md"
keywords = ["ai", "agents", "cli", "security", "claude-code"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["demos/", "*.tape"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = { version = "2.9", default-features = false, features = ["tls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
strip = true